@@ -1,5 +1,3 @@
-* get "bi-calc" demo working with autotools
-
 * compare understands negative numbers, but little else in the library does
   e.g. hex_to_decimal and decimal_to_hex do not understand negative numbers
        (treats as unsigned)
